welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:76: error: Unit does not take parameters
  for (compteur4 <- 1 to 6) {avance()()}
                                     ^FlowerCase:77: error: value Blue is not a member of object java.awt.Color
  faireFleur(Color.Blue)
                   ^FlowerCase:89: error: Unit does not take parameters
  for (compteur5 <- 1 to 6) {recule()()}
                                     ^FlowerCase:94: error: Unit does not take parameters
  for (compteur6 <- 1 to 8) {recule()()}
                                     ^FlowerCase:97: error: Unit does not take parameters
  for (compteur7 <- 1 to 5) {avance()()}
                                     ^FlowerCase:109: error: Unit does not take parameters
  for (compteur7 <- 1 to 6) {recule()()}
                                     ^